# personal-ai-asistant

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DECISIONS.md  PROJECT_CONTEXT.md  README.md  pyproject.toml
.agents/skills/personal-ai-session-closeout/: SKILL.md
.agents/skills/personal-ai-session-closeout/agents/: openai.yaml
.claude/skills/personal-ai-session-closeout/: SKILL.md
apps/api/: pyproject.toml
apps/api/src/assistant_api/: audit.py  bus.py  deps.py  main.py  settings.py  sweeper.py
apps/api/src/assistant_api/routers/: approvals.py  facts.py  runs.py  tasks.py  webhooks.py
apps/bot/: pyproject.toml
apps/bot/src/assistant_bot/: api_client.py  handlers.py  main.py  normalize.py  notifier.py  settings.py
apps/voice-worker/: pyproject.toml
apps/voice-worker/src/assistant_worker/: events_client.py  main.py  settings.py  simulator.py
apps/voice-worker/src/assistant_worker/call/: agent.py  control.py  metrics.py  pipeline.py  retry.py  runner.py  server.py  state.py  summary.py  termination.py  tools.py  twilio_client.py
apps/web/: package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/runs/[id]/: page.tsx
docs/epics/: EPIC-001-control-plane.md  EPIC-002-outbound-calls.md  EPIC-003-policy-approvals.md  EPIC-004-inbound-calls.md  EPIC-005-integrations-memory.md  EPIC-006-observability-cost-reliability.md  EPIC-007-commercialization-compliance.md
docs/product/: glossary.md  open-questions.md  personal-ai-assistant-tz.md  risks.md
docs/research/: 2026-06-11-provider-pricing.md
docs/superpowers/handovers/: HANDOVER-2026-06-10-documentation-bootstrap.md  HANDOVER-2026-06-11-assessment-and-roadmap.md  HANDOVER-2026-06-11-live-call-quality.md  HANDOVER-2026-06-11-stage1-implementation.md  HANDOVER-2026-06-11-stage2-live-stage3-policy.md  HANDOVER-2026-06-11-stage2-skeleton.md  HANDOVER-2026-06-12-call-data-and-termination.md  HANDOVER-2026-06-12-scenario-routing-eval-harness.md  HANDOVER-2026-06-14-flows-replatform-plan.md
docs/superpowers/plans/: 2026-06-11-live-call-quality.md  2026-06-11-mvp-stage1-control-plane-plan.md  2026-06-11-stage2-outbound-calls-plan.md  2026-06-11-stage3-policy-approvals-plan.md  2026-06-11-stage4-inbound-calls-plan.md  2026-06-11-stage5-integrations-memory-plan.md  2026-06-11-stage6-observability-plan.md  2026-06-11-stage7-commercialization-plan.md  2026-06-12-call-data-and-termination.md  2026-06-12-scenario-routing-eval-harness.md  2026-06-14-flows-dialog-replatform.md
docs/superpowers/specs/: 2026-06-10-agentic-documentation-system-design.md  2026-06-11-live-call-quality-design.md  2026-06-11-mvp-stage1-control-plane.md  2026-06-11-stage2-outbound-calls.md  2026-06-11-stage3-policy-approvals.md  2026-06-11-stage4-inbound-calls.md  2026-06-11-stage5-integrations-memory.md  2026-06-11-stage6-observability-cost-reliability.md  2026-06-11-stage7-commercialization-compliance.md  2026-06-12-call-data-and-termination-design.md  2026-06-12-scenario-routing-eval-harness-design.md  2026-06-14-flows-dialog-replatform-design.md
scripts/: eval_role_drift.py
tests/: conftest.py  test_agent_core.py  test_api_stage2.py  test_bot.py  test_call_server.py  test_call_state.py  test_call_termination.py  test_call_tools.py  test_eval_cases.py  test_eval_fakes.py  test_eval_llm_client.py  test_eval_role_drift.py  test_eval_runner.py  test_eval_scoring.py  test_eval_simulator.py  test_eval_text_edges.py  test_evals_package.py  test_facts.py  test_pipeline_builder.py  test_policy.py  test_queue_timeouts.py  test_retry_summary_metrics.py  test_run_events.py  test_scenarios_shared.py  test_schemas.py  test_tasks_api.py  test_turn_config.py  test_worker_e2e.py
