[project]
name = "personal-ai-assistant"
version = "0.1.0"
description = "Personal AI assistant for phone tasks - monorepo root"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "apps/api",
    "apps/bot",
    "apps/voice-worker",
    "packages/shared",
    "packages/database",
    "packages/policy",
    "packages/evals",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
    "fakeredis>=2.25",
    "httpx>=0.27",
    "ruff>=0.8",
    "asgi-lifespan>=2.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
